[tool.poetry]
name = "tap-csv"
version = "1.0.1"
description = "`tap-csv` is a Singer tap for CSV, built with the Meltano SDK for Singer Taps."
authors = ["Pat Nadolny"]
keywords = [
    "ELT",
    "CSV",
]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "<3.12,>=3.7.1"
singer-sdk = "^0.22.1"

[tool.poetry.dev-dependencies]
pytest = "^7.3.0"
black = "^23.3"
pydocstyle = "^6.1.1"
mypy = "^1.1"
types-requests = "^2.28.11"
coverage = "^7.2"
isort = "^5.11.5"

[tool.poetry.group.dev.dependencies]
tox = "3.28.0"
flake8 = "5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-csv = 'tap_csv.tap:TapCSV.cli'
